8328107: Shenandoah/C2: TestVerifyLoopOptimizations test failure